# Bio-Inspired-Navigation

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  data_generator:energy.py  data_generator:performance.py  data_generator:trajectory.py  docker-compose.yml  main.py  performance_summary.csv  pytest.ini  requirements.txt  setup.py  test_bio_nav_data.py  test_project.py  visualizer:plots.py
.github/workflows/: ci.yml  docker-image.yml  generator-generic-ossf-slsa3-publish.yml
bio_nav_data/: __init__.py  pipeline.py
bio_nav_data/data_generators/: __init__.py  energy.py  performance.py  trajectory.py
bio_nav_data/utils/: __init__.py  config.py  logger.py
bio_nav_data/visualizers/: __init__.py  plots.py
configs/: data_config.yaml  evaluation_config.yaml  full_config.yaml  training_config.yaml
output/: S1_energy_consumption.csv  S1_localization_accuracy.csv
ros2/src/bio_nav_data_ros/: package.xml  setup.cfg  setup.py
ros2/src/bio_nav_data_ros/bio_nav_data_ros/: __init__.py  converters.py  data_generation_node.py
ros2/src/bio_nav_data_ros/launch/: bio_nav_data.launch.py
ros2/src/bio_nav_data_ros/resource/: bio_nav_data_ros
src/: __init__.py  config.py  utils.py
src/data_generation/: __init__.py  lsci_simulator.py  main_generator.py  noise_models.py  oct_simulator.py
src/evaluation/: __init__.py  evaluate.py
src/model/: __init__.py  dataset.py  loss.py  unet_model.py
src/training/: __init__.py  train.py
